...

        OutlinedTextField(
            value = code,
            onValueChange = onCodeChange,
            modifier = Modifier
                .fillMaxWidth()
                .testTag("invitation-code"),
            placeholder = { Text(stringResource(R.string.invitation_code_placeholder)) },
            isError = codeErrorMessage != null,
            supportingText = {
                Text(codeErrorMessage ?: stringResource(R.string.invitation_code_helper))
            },
            leadingIcon = {
...

        OutlinedTextField(
            value = name,
            onValueChange = onNameChange,
            modifier = Modifier
                .fillMaxWidth()
                .testTag("invitation-name"),
            placeholder = { Text(stringResource(R.string.invitation_name_placeholder)) },
            isError = nameErrorMessage != null,
            supportingText = nameErrorMessage?.let { message ->
                { Text(message) }
            },
            leadingIcon = {
...

        OutlinedTextField(
            value = email,
            onValueChange = onEmailChange,
            modifier = Modifier
                .fillMaxWidth()
                .testTag("invitation-email"),
            placeholder = { Text(stringResource(R.string.invitation_email_placeholder)) },
            isError = emailErrorMessage != null,
            supportingText = emailErrorMessage?.let { message ->
                { Text(message) }
            },
            leadingIcon = {
...

        OutlinedTextField(
            value = password,
            onValueChange = onPasswordChange,
            modifier = Modifier
                .fillMaxWidth()
                .testTag("invitation-password"),
            placeholder = { Text(stringResource(R.string.invitation_password_placeholder)) },
            isError = passwordErrorMessage != null,
            supportingText = {
                Text(passwordErrorMessage ?: stringResource(R.string.invitation_password_helper))
            },
            leadingIcon = {
...
