...

        OutlinedTextField(
            value = password,
            onValueChange = onPasswordChange,
            modifier = Modifier
                .fillMaxWidth()
                .testTag("password-reset-new-password"),
            placeholder = { Text(stringResource(R.string.password_reset_new_password_placeholder)) },
            isError = passwordErrorMessage != null,
            supportingText = {
                Text(passwordErrorMessage ?: stringResource(R.string.password_reset_password_helper))
            },
            leadingIcon = {
...

        OutlinedTextField(
            value = repeatedPassword,
            onValueChange = onRepeatedPasswordChange,
            modifier = Modifier
                .fillMaxWidth()
                .testTag("password-reset-repeat-password"),
            placeholder = { Text(stringResource(R.string.password_reset_repeat_password_placeholder)) },
            isError = repeatedPasswordErrorMessage != null,
            supportingText = repeatedPasswordErrorMessage?.let { message ->
                { Text(message) }
            },
            leadingIcon = {
...
