...

        OutlinedTextField(
            value = email,
            onValueChange = onEmailChange,
            modifier = Modifier
                .fillMaxWidth()
                .testTag("password-reset-request-email"),
            placeholder = { Text(stringResource(R.string.login_email_placeholder)) },
            isError = emailErrorMessage != null,
            supportingText = emailErrorMessage?.let { message ->
                { Text(message) }
            },
            leadingIcon = {
...
